--- a/dotenv_files/.env-example
+++ b/dotenv_files/.env-example
@@ -1,16 +1,24 @@
 SECRET_KEY="CHANGE-ME"
 
-API_SECRET_KEY="CHANGE-ME"
-
 # 0 False, 1 True
 DEBUG="1"
 
 # Comma Separated values
 ALLOWED_HOSTS="127.0.0.1, localhost"
 
+# POSTGRE SERVER
 DB_ENGINE="django.db.backends.postgresql"
 POSTGRES_DB="CHANGE-ME"
 POSTGRES_USER="CHANGE-ME"
 POSTGRES_PASSWORD="CHANGE-ME"
 POSTGRES_HOST="localhost"
 POSTGRES_PORT="5432"
+
+# SMTP SERVER
+EMAIL_HOST="CHANGE-ME"
+EMAIL_PORT="CHANGE-ME"
+EMAIL_USE_TLS="CHANGE-ME"
+EMAIL_HOST_USER="CHANGE-ME"
+EMAIL_HOST_PASSWORD="CHANGE-ME"
+DEFAULT_FROM_EMAIL="CHANGE-ME"
+EMAIL_RECIPIENT_LIST="CHANGE-ME"
